# gitdatabase

./: .pre-commit-config.yaml  404.html  Cargo.toml  Dockerfile  README.md  index.html  mkdocs.yml  plan.md  prd.md  requirements-docs.txt  sitemap.xml
.github/agents/: prd.agent.md  task-planner.agent.md
.github/workflows/: docs-gh-pages.yml  gitdatabase-ci.yml
architecture/: index.html
crates/gitbase-cli/: Cargo.toml
crates/gitbase-cli/src/: main.rs
crates/gitbase-db/: Cargo.toml
crates/gitbase-db/src/: blobs.rs  lib.rs  metadata.rs  search.rs  uast.rs
crates/gitbase-git/: Cargo.toml
crates/gitbase-git/src/: lib.rs
crates/gitbase-loader/: Cargo.toml
crates/gitbase-loader/src/: lib.rs
crates/gitbase-loader/tests/: blob_hydration.rs  metadata_sync.rs  search_index.rs  uast_index.rs
crates/gitbase-pgwire/: Cargo.toml
crates/gitbase-pgwire/src/: handler.rs  lib.rs
crates/gitbase-uast/: Cargo.toml
crates/gitbase-uast/src/: lib.rs
database/: index.html
docker/: docker-compose.yml
docs/: architecture.md  database.md  index.md  pilot.md  runbook.md
migrations/: 20260419000001_init.sql  20260426000001_git_metadata.sql  20260426000002_uast.sql  20260426000003_search.sql
pilot/: index.html
runbook/: index.html
search/: search_index.json
