[workspace]
members = [
    "crates/gitbase-cli",
    "crates/gitbase-db",
    "crates/gitbase-git",
    "crates/gitbase-loader",
    "crates/gitbase-pgwire",
    "crates/gitbase-uast",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
gix = "0.83"
pgwire = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures = "0.3"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
walkdir = "2"
