[package]
name = "gitbase-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "gitbase"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
gitbase-db = { path = "../gitbase-db" }
gitbase-pgwire = { path = "../gitbase-pgwire" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
