[package]
name = "gitbase-pgwire"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
gitbase-loader = { path = "../gitbase-loader" }
pgwire.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
